--- a/build.gradle
+++ b/build.gradle
@@ -47,8 +47,20 @@ tasks.withType(Test) {
     }
 }
 
-task one_property(type: Test){
-    useJUnitPlatform{
-        includeTags"one_propety_test"
+task one_property(type: Test) {
+    useJUnitPlatform {
+        includeTags "one_propety_test"
+    }
+}
+
+task many_properties(type: Test) {
+    useJUnitPlatform {
+        includeTags "many_properties_test"
+    }
+}
+
+task hello(type: Test) {
+    useJUnitPlatform {
+        includeTags "hello"
     }
 }
